<resources>
    <string name="app_name">Patient Sync</string>
    <string name="add_patient">Add Patient</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_pulse">Enter Pulse</string>
    <string name="submit">Submit</string>
    <string name="patient_details">Patient Details</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="pulse_history">Pulse History</string>
    <string name="add_current_pulse">Add Current Pulse</string>
    <string name="recent_pulse">Recent Pulse:</string>
    <string name="recorded_pulse">Recorded Pulse:</string>
</resources>
